--- a/24-Connecting-to-External-Devices.Rmd
+++ b/24-Connecting-to-External-Devices.Rmd
@@ -17,9 +17,11 @@ This chapter deals with configuring, transmitting and receiving DMX over Etherne
 **Vibe has two user accessible Ethernet networks:**
 
 -   Data Network - Accessible via the two etherCON connectors on the rear panel. 
+
 ◾ Used for Art-Net, sACN, Compulite VC protocol nodes and Master/Slave backup.
     
 -   General Networks - Accessible via the two RJ45 connectors on the rear panel. 
+
 ◾ Used for Network storage of show files and remote diagnostics.
     
 
@@ -45,7 +47,7 @@ Each network device must have its own unique static IP address in the form of fo
 
 >The Vibe can be used in networks using a DHCP server but cannot act as a DHCP server.
 
->In all cases, the first triplets must match for devices to communicate with one another.
+><span style="color:Red">In all cases, the first triplets must match for devices to communicate with one another.</span>.
 
 **Switches**:
 
@@ -54,7 +56,7 @@ Each network device must have its own unique static IP address in the form of fo
 -   When more than one device must be connected to the Vibe a good quality gigabit switch should be used.
     
 
->Many a system has gone down due to bad Ethernet cabling and cheap switches. It is recommended that etherCON connectors be used where possible in conjunction with professional grade switches designed for lighting and audio applications.
+><span style="color:Red">Many a system has gone down due to bad Ethernet cabling and cheap switches. It is recommended that etherCON connectors be used where possible in conjunction with professional grade switches designed for lighting and audio applications.</span>.
 
 
 
@@ -66,15 +68,18 @@ Each network device must have its own unique static IP address in the form of fo
 Compulite manufactures the **ePort** brand of DMX over Ethernet nodes. **Supported Protocols:**
 
 -   ePort 41 - Prior to Sept 2016 (check serial number with Compulite to confirm) 
+
 ◾ Compulite VC protocol
 ◾ Art-Net v2
     
 -   ePort-41 - Current 
+
 ◾ sACN pre-release and release versions 
 ◾ Art-Net 3 
 ◾ Compulite VC protocol
     
 -   ePort-8 and ePort-2 
+
 ◾ sACN pre-release and release versions 
 ◾ Art-Net 3 
 ◾ Compulite VC protocol For more product information, See: ePort Documents
@@ -82,7 +87,7 @@ Compulite manufactures the **ePort** brand of DMX over Ethernet nodes. **Support
 
 Before an ePort can be connected it should be configured using the CNET Manager software, available at the above link.
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FKtKjDA2xiT6CVHWngE7Q%2Fimage.png?alt=media&token=7c8cf01a-067a-4c0d-9485-455c895c43cd)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FazG0oFLuOppI8XrwMiK8%2F24.2.webp?alt=media&token=439bc413-9d0a-487f-8fff-bc31e829c581)
 
 **Configuring ePorts:**
 
@@ -108,18 +113,18 @@ Vibe currently supports transmission of 256 universes of DMX over Ethernet using
 -   Tap {DMX SETTINGS} in the patch toolbar found at the bottom of the Patch Workspace Template. The DMX Properties Pop-up will open.
     
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FDbUaVsJmNV9YVlUroR6x%2Fimage.png?alt=media&token=9ad7bc9b-7bc7-4bee-8515-81c327fea619)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FzMGK8HmzzbLpRxRNYeh8%2F24.3.webp?alt=media&token=4f56ee15-cc74-4574-b077-257de6f78a21)
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FcwG0UUTQDThCwUigBEqQ%2Fimage.png?alt=media&token=79bf49c9-01f9-4df9-9c2a-699272abb5cd)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FRZbgxqeSNTYs9CfcabMm%2F24.3.1.webp?alt=media&token=2fd64c6c-b903-4168-87d8-f19188f7342d)
 
 1. Under the Protocol heading, Tap {Art-Net} or {sACN} - The selection will turn red.
     
 2. Under Broadcast Options (VC, Art-Net, sACN) tap {Out} - The status indicator light will turn green. The console will now be outputting the selected protocol on the etherCON Data ports.
     
 
->The Vibe is capable of transmitting more than one protocol at a time. To save bandwidth it is also possible to enable only the universes for each protocol that are required. Vibe has separate universe patches for VCs, Art-Net, and sACN. By default, universes are patched 1 to 1 for each protocol. It is possible to reroute universe output destinations. Normally fixtures patched to console source universe 1 would be transmitted on Ethernet destination universe 1 but sometimes when multiple consoles are on line it is desirable to reroute universes to avoid conflicts. Source universe 1 for example could be rerouted to destination universe 101.
+The Vibe is capable of transmitting more than one protocol at a time. To save bandwidth it is also possible to enable only the universes for each protocol that are required. Vibe has separate universe patches for VCs, Art-Net, and sACN. By default, universes are patched 1 to 1 for each protocol. It is possible to reroute universe output destinations. Normally fixtures patched to console source universe 1 would be transmitted on Ethernet destination universe 1 but sometimes when multiple consoles are on line it is desirable to reroute universes to avoid conflicts. Source universe 1 for example could be rerouted to destination universe 101.
 
-The Vibe is licensed for 64, 96, 128, or 255 console source universes but these universes may be freely rerouted to any destination universe from 0 ➡️ 256 providing the total amount of universes does not exceed the purchased license.
+>The Vibe is licensed for 64, 96, 128, or 255 console source universes but these universes may be freely rerouted to any destination universe from 0 ➡️ 256 providing the total amount of universes does not exceed the purchased license.
 
 **Reroute Console Universes:**
 
