--- a/03-Vibe-Hardware.Rmd
+++ b/03-Vibe-Hardware.Rmd
@@ -24,7 +24,7 @@ This chapter covers basic specifications.
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FQ7Yp9gAyO9rW9YbcenEq%2F3.png?alt=media&token=b1b77950-f160-4efb-8ec7-a7d1d666720d)
 
-​<p align=center> **Rear Panel View**</p>
+**<p align=center> **Rear Panel View**</p>**
 
 
 
