--- a/08-Programming-Concepts.Rmd
+++ b/08-Programming-Concepts.Rmd
@@ -16,28 +16,42 @@ The Vibe is an advanced lighting control system designed to simplify programming
 
 -   To simplify programming, Vibe uses an abstract layer that allows fixtures of different hardware types to be presented to the user in a universal way.
     
--   The dedicated graphical "Smart Screen" presents global pickers for most parameters including: ◾ HSV color picker (Hue, Saturation, Intensity) 
+-   The dedicated graphical "Smart Screen" presents global pickers for most parameters including: 
+
+◾ HSV color picker (Hue, Saturation, Intensity) 
+
 ◾ P/T XYZ Trackpad 
+
 ◾ Blade picker 
+
 ◾ Beam picker for Iris, Zoom, Focus and Frost effects 
+
 ◾ General slider picker for GOBO, Color, Prism, and Animation wheels 
+
 ◾ Intensity picker for common intensity values and strobe effects
     
 
 **Real World Units:**
 
 -   Where possible picker values are displayed in "Real World" units 
+
 ◾ XYZ P/T in degrees 
+
 ◾ Strobe in HZ 
+
 ◾ Color in HSV 0-360 degrees 
+
 ◾ Zoom in degrees
     
 
 **Virtual Parameters:**
 
 -   To make it easier to work with fixtures using different color systems and XYZ tracking systems, Vibe creates virtual parameters that may not exist in the physical fixture. Examples would be: 
+
 ◾ HSV - As a common denominator for CMY, RGB, and Multi color LED fixtures such as RGBA, ETC Seven color, RGBW. 
+
 ◾ Virtual Intensity - For controlling LED fixtures that do not have a dimmer parameter. 
+
 ◾ XYZ - for calibration of fixtures that only have a physical Pan/Tilt
     
 
@@ -67,8 +81,11 @@ The Vibe is an advanced lighting control system designed to simplify programming
 **Color spaces:**
 
 -   The Vibe can work in three color spaces: 
+
 ◾ HSV - Color for all types of fixtures can be set using the Color picker or the HSV parameter wheels. HSV virtual parameters are stored in Cues and Libraries just like physical parameters. Automatically CMY or RGB values (depending on the fixture type) will be displayed but not directly referenced in cues using HSV.
+
 ◾ RGB - If color values are set using the physical RGB parameters, those values are stored in the cue and HSV values will be displayed but not directly referenced .
+
 ◾ CMY - If color values are set using the CMY parameters, those values are stored in the cue and HSV values will be displayed but not directly referenced.
     
 
